--- a/plugins/org.springsource.ggts/content/root.xhtml
+++ b/plugins/org.springsource.ggts/content/root.xhtml
@@ -9,7 +9,7 @@
 	<body>
 		<div id="bg"><img src="background.png" width="100%" height="100%" alt=""/></div>
 		<div id="content">
-			<div class="lower-right-logo full-page"><div class="top-left-logo full-page"><div class="title full-page">
+			<div class="lower-right-logo full-page"><div class="top-left-logo full-page"><div class="title full-page"><div class="copyright full-page">
 				<div class="v-outer"><div class="v-middle"><div class="v-inner">
 					<table align="center" cellpadding="5">
 						<tr><td class="left-align">
@@ -42,7 +42,7 @@
 				  		-->
 					</table>
 				</div></div></div>
-			</div></div></div>
+			</div></div></div></div>
 		</div>
 	</body>
 </html>
