--- a/plugins/org.springsource.sts/content/root.xhtml
+++ b/plugins/org.springsource.sts/content/root.xhtml
@@ -27,7 +27,7 @@
 			  				</a>
 				  		</td></tr>
 				  		<tr><td class="left-align">
-			  				<a href="http://org.eclipse.ui.intro/openBrowser?url=http://download.springsource.com/release/STS/doc/STS-new_and_noteworthy.pdf" class="largefont">
+			  				<a href="http://org.eclipse.ui.intro/openBrowser?url=http://static.springsource.org/sts/nan/latest/NewAndNoteworthy.html" class="largefont">
 		 		  				<img src="new.png"/>
 		 		  				New and Noteworthy
 				  			</a>		  		
