--- a/plugins/org.springsource.sts/about.html
+++ b/plugins/org.springsource.sts/about.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <h2>About STS</h2>
-<p>March 11, 2013</p>
+<p>July 9, 2013</p>
 <h3>License</h3>
-<p>VMware makes available all content in this download ("Content"). Unless otherwise
+<p>GoPivotal makes available all content in this download ("Content"). Unless otherwise
 indicated below, the Content is provided to you under the terms and conditions of 
 the Eclipse Public License Version 1.0 ("EPL"). A copy of the EPL is available in 
 the file called license.txt. For purposes of the EPL, "Program" will mean the Content.</p>
 <h3>Third Party Content</h3>
-<p>The Content includes items that have been sourced from third parties, as set out in the file called open_source_license.txt.</p>
+<p>The Content includes items that have been sourced from third parties, as set out in the file called open_source_licenses.txt, located in the feature components of this project.</p>
 </body>
 </html>
