--- a/plugins/org.springsource.sts/about.html
+++ b/plugins/org.springsource.sts/about.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-<title>About STS</title>
-<meta name="author" content="SpringSource">
+<title>About Spring Tool Suite Distribution</title>
+<meta name="author" content="Pivotal">
 </head>
 <body>
-<h2>About STS</h2>
-<p>July 9, 2013</p>
+<h2>About Spring Tool Suite Distribution</h2>
+<p>October 2, 2013</p>
 <h3>License</h3>
 <p>GoPivotal makes available all content in this download ("Content"). Unless otherwise
 indicated below, the Content is provided to you under the terms and conditions of 
