cleanup up nightly download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -34,24 +34,25 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 4.5</h3>
+	<h3>Spring Tool Suite - based on Eclipse 4.5.0 (milestone builds)</h3>
 	<div id="e45"></div>
 	<script type="text/javascript">
 	$('#e45').load('sts-nightly-e4.5.html');
 	</script>
 
-	<h3>Spring Tool Suite - based on Eclipse 4.4</h3>
+	<h3>Spring Tool Suite - based on Eclipse 4.4.1</h3>
 	<div id="e44"></div>
 	<script type="text/javascript">
 	$('#e44').load('sts-nightly-e4.4.html');
 	</script>
 
-	<h3>Spring Tool Suite - based on Eclipse 4.3 - including Java8 support</h3>
+	<h3>Spring Tool Suite - based on Eclipse 4.3.2 - including Java8 support</h3>
 	<div id="e43"></div>
 	<script type="text/javascript">
 	$('#e43').load('sts-nightly-e4.3.html');
 	</script>
 
+<!--
 	<h3>Spring Tool Suite - based on Eclipse 4.2</h3>
 	<div id="e42"></div>
 	<script type="text/javascript">
@@ -69,26 +70,27 @@
 	<script type="text/javascript">
 	$('#e37').load('sts-nightly-e3.7.html');
 	</script>
+-->
 
-
-	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.5</h3>
+	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.5.0 (milestone builds)</h3>
 	<div id="ggts-e45"></div>
 	<script type="text/javascript">
 	$('#ggts-e45').load('ggts-nightly-e4.5.html');
 	</script>
 
-	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.4</h3>
+	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.4.1</h3>
 	<div id="ggts-e44"></div>
 	<script type="text/javascript">
 	$('#ggts-e44').load('ggts-nightly-e4.4.html');
 	</script>
 
-	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.3 - including Java8 support</h3>
+	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.3.2 - including Java8 support</h3>
 	<div id="ggts-e43"></div>
 	<script type="text/javascript">
 	$('#ggts-e43').load('ggts-nightly-e4.3.html');
 	</script>
 
+<!--
 	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.2</h3>
 	<div id="ggts-e42"></div>
 	<script type="text/javascript">
@@ -106,6 +108,7 @@
 	<script type="text/javascript">
 	$('#ggts-e37').load('ggts-nightly-e3.7.html');
 	</script>
+-->
 
 </div>
 </body>
