--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -26,6 +26,13 @@
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
 			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
 			<li>for Eclipse Kepler (4.3): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
+		</ul>
+	</p>
+		
+	<p>not updated anymore:</p>
+
+	<p>
+		<ul>
 			<li>for Eclipse Juno (4.2): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2</a></li>
 			<li>for Eclipse Juno (3.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8</a></li>
 			<li>for Eclipse Indigo (3.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.7</a></li>
@@ -40,7 +47,7 @@
 	$('#e45').load('sts-nightly-e4.5.html');
 	</script>
 
-	<h3>Spring Tool Suite - based on Eclipse 4.4.1</h3>
+	<h3>Spring Tool Suite - based on Eclipse 4.4.2</h3>
 	<div id="e44"></div>
 	<script type="text/javascript">
 	$('#e44').load('sts-nightly-e4.4.html');
@@ -71,7 +78,7 @@
 	$('#e37').load('sts-nightly-e3.7.html');
 	</script>
 -->
-
+<!--
 	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.5.0 (milestone builds)</h3>
 	<div id="ggts-e45"></div>
 	<script type="text/javascript">
@@ -89,7 +96,7 @@
 	<script type="text/javascript">
 	$('#ggts-e43').load('ggts-nightly-e4.3.html');
 	</script>
-
+-->
 <!--
 	<h3>Groovy/Grails Tool Suite - based on Eclipse 4.2</h3>
 	<div id="ggts-e42"></div>
