updated nightly download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -13,19 +13,18 @@
 
 	<div style="margin:40px;">
 	
-	<h1>Spring Tool Suite &amp; Groovy/Grails Tool Suite - Nightly builds</h1>
+	<h1>Spring Tool Suite - Nightly builds</h1>
 
 	<h2>p2 repositories</h2>
 
 	<p>Note: please do NOT use your browser to access these p2 repositories directly, there is no web index content being served.
-		Instead add them to the available update sites in your Eclipse/STS preferences or paste them into the "Install New Software" diallog.
+		Instead add them to the available update sites in your Eclipse/STS preferences or paste them into the "Install New Software" dialog.
 	</p>
 
 	<p>
 		<ul>
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
 			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
-			<li>for Eclipse Kepler (4.3): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
 		</ul>
 	</p>
 		
@@ -33,6 +32,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Kepler (4.3): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
 			<li>for Eclipse Juno (4.2): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2</a></li>
 			<li>for Eclipse Juno (3.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8</a></li>
 			<li>for Eclipse Indigo (3.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.7</a></li>
@@ -52,14 +52,13 @@
 	<script type="text/javascript">
 	$('#e44').load('sts-nightly-e4.4.html');
 	</script>
-
+<!--
 	<h3>Spring Tool Suite - based on Eclipse 4.3.2 - including Java8 support</h3>
 	<div id="e43"></div>
 	<script type="text/javascript">
 	$('#e43').load('sts-nightly-e4.3.html');
 	</script>
 
-<!--
 	<h3>Spring Tool Suite - based on Eclipse 4.2</h3>
 	<div id="e42"></div>
 	<script type="text/javascript">
