--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -41,13 +41,13 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 4.5.0 (milestone builds)</h3>
+	<h3>Spring Tool Suite - based on Eclipse Mars GA (4.5.0) </h3>
 	<div id="e45"></div>
 	<script type="text/javascript">
 	$('#e45').load('sts-nightly-e4.5.html');
 	</script>
 
-	<h3>Spring Tool Suite - based on Eclipse 4.4.2</h3>
+	<h3>Spring Tool Suite - based on Eclipse Luna SR2 (4.4.2)</h3>
 	<div id="e44"></div>
 	<script type="text/javascript">
 	$('#e44').load('sts-nightly-e4.4.html');
