added internal nightly distribution build

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -52,6 +52,16 @@
 	<script type="text/javascript">
 	$('#e44').load('sts-nightly-e4.4.html');
 	</script>
+	
+	<hr/>
+	
+	<h3>Spring Tool Suite - internal version (on Eclipse Mars 4.5, Groovy-Eclipse, Lombok)</h3>
+	<div id="e45-internal"></div>
+	<script type="text/javascript">
+	$('#e45-internal').load('sts-nightly-e4.5-internal.html');
+	</script>
+
+	
 <!--
 	<h3>Spring Tool Suite - based on Eclipse 4.3.2 - including Java8 support</h3>
 	<div id="e43"></div>
