updated nightly distro download page for Mars.1

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -41,7 +41,7 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse Mars GA (4.5.0) </h3>
+	<h3>Spring Tool Suite - based on Eclipse Mars.1 (4.5.1) </h3>
 	<div id="e45"></div>
 	<script type="text/javascript">
 	$('#e45').load('sts-nightly-e4.5.html');
@@ -55,7 +55,7 @@
 	
 	<hr/>
 	
-	<h3>Spring Tool Suite - internal version (on Eclipse Mars 4.5, Groovy-Eclipse, Lombok)</h3>
+	<h3>Spring Tool Suite - internal version (on Eclipse Mars 4.5.1, Groovy-Eclipse, Lombok)</h3>
 	<div id="e45-internal"></div>
 	<script type="text/javascript">
 	$('#e45-internal').load('sts-nightly-e4.5-internal.html');
