--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,6 +23,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
 			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
 		</ul>
@@ -51,6 +52,12 @@
 	<div id="e44"></div>
 	<script type="text/javascript">
 	$('#e44').load('sts-nightly-e4.4.html');
+	</script>
+	
+	<h3>Spring Tool Suite - based on Eclipse Neon Milestone Builds (4.6)</h3>
+	<div id="e46"></div>
+	<script type="text/javascript">
+	$('#e46').load('sts-nightly-e4.6.html');
 	</script>
 	
 	<hr/>
