updated nightly download page for 3.8.0 dev cycle

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Spring Tool Suite &amp; Groovy/Grails Tool Suite - Nightly updates</title>
+	<title>Spring Tool Suite - Nightly builds</title>
 	<link rel="shortcut icon" type="image/x-icon" href="http://www.springsource.org/sites/all/themes/s2org11/favicon.ico"/>
 	<link rel="stylesheet" href="stylesheet.css" type="text/css">
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
@@ -25,7 +25,6 @@
 		<ul>
 			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
-			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
 		</ul>
 	</p>
 		
@@ -33,6 +32,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
 			<li>for Eclipse Kepler (4.3): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
 			<li>for Eclipse Juno (4.2): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2</a></li>
 			<li>for Eclipse Juno (3.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8</a></li>
@@ -42,27 +42,21 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse Mars.2 (4.5.2) </h3>
-	<div id="e45"></div>
-	<script type="text/javascript">
-	$('#e45').load('sts-nightly-e4.5.html');
-	</script>
-
-	<h3>Spring Tool Suite - based on Eclipse Luna SR2 (4.4.2)</h3>
-	<div id="e44"></div>
-	<script type="text/javascript">
-	$('#e44').load('sts-nightly-e4.4.html');
-	</script>
-	
 	<h3>Spring Tool Suite - based on Eclipse Neon Milestone Builds (4.6)</h3>
 	<div id="e46"></div>
 	<script type="text/javascript">
 	$('#e46').load('sts-nightly-e4.6.html');
 	</script>
 	
+	<h3>Spring Tool Suite - based on Eclipse Mars.2 (4.5.2) </h3>
+	<div id="e45"></div>
+	<script type="text/javascript">
+	$('#e45').load('sts-nightly-e4.5.html');
+	</script>
+
 	<hr/>
 	
-	<h3>Spring Tool Suite - internal version (on Eclipse Mars 4.5.1, Groovy-Eclipse, Lombok)</h3>
+	<h3>Spring Tool Suite - internal version (on Eclipse Mars.2 (4.5.2), Groovy-Eclipse, Lombok)</h3>
 	<div id="e45-internal"></div>
 	<script type="text/javascript">
 	$('#e45-internal').load('sts-nightly-e4.5-internal.html');
