update nightly download page to include 4.6-based internal distro

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -56,10 +56,10 @@
 
 	<hr/>
 	
-	<h3>Spring Tool Suite - internal version (on Eclipse Mars.2 (4.5.2), Groovy-Eclipse, Lombok)</h3>
-	<div id="e45-internal"></div>
+	<h3>Spring Tool Suite - internal version (on Eclipse Neon Mx (4.6.0.Mx), Groovy-Eclipse, Lombok)</h3>
+	<div id="e46-internal"></div>
 	<script type="text/javascript">
-	$('#e45-internal').load('sts-nightly-e4.5-internal.html');
+	$('#e46-internal').load('sts-nightly-e4.6-internal.html');
 	</script>
 
 	
