added 4.7-based builds to nightly download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,6 +23,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Oxygen (4.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
 			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
 		</ul>
@@ -42,7 +43,13 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse Neon Milestone Builds (4.6)</h3>
+	<h3>Spring Tool Suite - based on Eclipse Oxygen Milestone Builds (4.7)</h3>
+	<div id="e47"></div>
+	<script type="text/javascript">
+	$('#e47').load('sts-nightly-e4.7.html');
+	</script>
+	
+	<h3>Spring Tool Suite - based on Eclipse Neon.2 (4.6.2)</h3>
 	<div id="e46"></div>
 	<script type="text/javascript">
 	$('#e46').load('sts-nightly-e4.6.html');
@@ -55,13 +62,13 @@
 	</script>
 
 	<hr/>
-	
+<!--	
 	<h3>Spring Tool Suite - internal version (on Eclipse Neon Mx (4.6.0.Mx), Groovy-Eclipse, Lombok)</h3>
 	<div id="e46-internal"></div>
 	<script type="text/javascript">
 	$('#e46-internal').load('sts-nightly-e4.6-internal.html');
 	</script>
-
+-->
 	
 <!--
 	<h3>Spring Tool Suite - based on Eclipse 4.3.2 - including Java8 support</h3>
