updated nightly download page for oxygen.2

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -43,7 +43,7 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse Oxygen.1a (4.7.1a)</h3>
+	<h3>Spring Tool Suite - based on Eclipse Oxygen.2 (4.7.2)</h3>
 	<div id="e47"></div>
 	<script type="text/javascript">
 	$('#e47').load('sts-nightly-e4.7.html');
