added 4.8-based builds to nightly download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,6 +23,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Photon (4.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
 			<li>for Eclipse Oxygen (4.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
 			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
 		</ul>
@@ -43,6 +44,12 @@
 
 	<h2>distribution builds</h2>
 
+	<h3>Spring Tool Suite - based on Eclipse Photon Milestone Builds (4.8.0)</h3>
+	<div id="e48"></div>
+	<script type="text/javascript">
+	$('#e48').load('sts-nightly-e4.8.html');
+	</script>
+	
 	<h3>Spring Tool Suite - based on Eclipse Oxygen.2 (4.7.2)</h3>
 	<div id="e47"></div>
 	<script type="text/javascript">
