updated m2e and oxygen.3a labels

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -50,7 +50,7 @@
 	$('#e48').load('sts-nightly-e4.8.html');
 	</script>
 	
-	<h3>Spring Tool Suite - based on Eclipse Oxygen.2 (4.7.2)</h3>
+	<h3>Spring Tool Suite - based on Eclipse Oxygen.3a (4.7.3a)</h3>
 	<div id="e47"></div>
 	<script type="text/javascript">
 	$('#e47').load('sts-nightly-e4.7.html');
