updated nightly download page to include 4.9-based builds

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,8 +23,8 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse 2018-09 (4.9): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9</a></li>
 			<li>for Eclipse Photon (4.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
-			<li>for Eclipse Oxygen (4.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
 		</ul>
 	</p>
 		
@@ -32,6 +32,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Oxygen (4.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
 			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
 			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
@@ -44,16 +45,16 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse Photon Milestone Builds (4.8.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2018-09 Milestone Builds (4.9.0)</h3>
+	<div id="e49"></div>
+	<script type="text/javascript">
+	$('#e49').load('sts-nightly-e4.9.html');
+	</script>
+	
+	<h3>Spring Tool Suite - based on Eclipse Photon Release (4.8.0)</h3>
 	<div id="e48"></div>
 	<script type="text/javascript">
 	$('#e48').load('sts-nightly-e4.8.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse Oxygen.3a (4.7.3a)</h3>
-	<div id="e47"></div>
-	<script type="text/javascript">
-	$('#e47').load('sts-nightly-e4.7.html');
 	</script>
 	
 	<hr/>
