--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,6 +23,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse 2018-12 (4.10): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.10">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.10</a></li>
 			<li>for Eclipse 2018-09 (4.9): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9</a></li>
 			<li>for Eclipse Photon (4.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
 		</ul>
@@ -45,7 +46,13 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 2018-09 Milestone Builds (4.9.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2018-12 Milestone Builds (4.10.0)</h3>
+	<div id="e410"></div>
+	<script type="text/javascript">
+	$('#e410').load('sts-nightly-e4.10.html');
+	</script>
+	
+	<h3>Spring Tool Suite - based on Eclipse 2018-09 Release (4.9.0)</h3>
 	<div id="e49"></div>
 	<script type="text/javascript">
 	$('#e49').load('sts-nightly-e4.9.html');
