updated nightly download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -46,7 +46,7 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 2018-12 Milestone Builds (4.10.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2018-12 (4.10.0)</h3>
 	<div id="e410"></div>
 	<script type="text/javascript">
 	$('#e410').load('sts-nightly-e4.10.html');
