--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,9 +23,9 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse 2019-03 (4.11): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.11">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.11</a></li>
 			<li>for Eclipse 2018-12 (4.10): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.10">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.10</a></li>
 			<li>for Eclipse 2018-09 (4.9): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9</a></li>
-			<li>for Eclipse Photon (4.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
 		</ul>
 	</p>
 		
@@ -33,6 +33,7 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse Photon (4.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
 			<li>for Eclipse Oxygen (4.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
 			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
 			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
@@ -46,22 +47,22 @@
 
 	<h2>distribution builds</h2>
 
+	<h3>Spring Tool Suite - based on Eclipse 2019-03 Milestone Builds (4.11.0)</h3>
+	<div id="e411"></div>
+	<script type="text/javascript">
+	$('#e411').load('sts-nightly-e4.11.html');
+	</script>
+	
 	<h3>Spring Tool Suite - based on Eclipse 2018-12 (4.10.0)</h3>
 	<div id="e410"></div>
 	<script type="text/javascript">
 	$('#e410').load('sts-nightly-e4.10.html');
 	</script>
 	
-	<h3>Spring Tool Suite - based on Eclipse 2018-09 Release (4.9.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2018-09 (4.9.0)</h3>
 	<div id="e49"></div>
 	<script type="text/javascript">
 	$('#e49').load('sts-nightly-e4.9.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse Photon Release (4.8.0)</h3>
-	<div id="e48"></div>
-	<script type="text/javascript">
-	$('#e48').load('sts-nightly-e4.8.html');
 	</script>
 	
 	<hr/>
