nightly download page housekeeping

--- a/common/html/nightly-generic-snippet.html
+++ b/common/html/nightly-generic-snippet.html
@@ -1,11 +1,11 @@
 <ul>
 
-	<li><a href="http://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32-x86_64.zip">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32-x86_64.zip</li>
-	<li><a href="http://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32.zip">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32.zip</li>
+	<li><a href="https://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32-x86_64.zip">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32-x86_64.zip</li>
+	<li><a href="https://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32.zip">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-win32.zip</li>
 
-	<li><a href="http://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-macosx-cocoa-x86_64.dmg">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-macosx-cocoa-x86_64.dmg</li>
+	<li><a href="https://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-macosx-cocoa-x86_64.dmg">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-macosx-cocoa-x86_64.dmg</li>
 
-	<li><a href="http://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk-x86_64.tar.gz">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk-x86_64.tar.gz</li>
-	<li><a href="http://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk.tar.gz">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk.tar.gz</li>
+	<li><a href="https://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk-x86_64.tar.gz">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk-x86_64.tar.gz</li>
+	<li><a href="https://download.springsource.com/snapshot/STS/nightly/dist/@MAJOR-TARGET@/@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk.tar.gz">@VARIANT@-tool-suite-@QUALIFIER@-@TARGET@-linux-gtk.tar.gz</li>
 
 </ul>
