--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 <html>
 
 <head>
 	<title>Spring Tool Suite - Nightly builds</title>
-	<link rel="shortcut icon" type="image/x-icon" href="http://www.springsource.org/sites/all/themes/s2org11/favicon.ico"/>
+	<link rel="shortcut icon" type="image/x-icon" href="https://www.springsource.org/sites/all/themes/s2org11/favicon.ico"/>
 	<link rel="stylesheet" href="stylesheet.css" type="text/css">
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 	<script src="jquery-2.0.3.min.js"></script>
@@ -23,9 +23,9 @@
 
 	<p>
 		<ul>
-			<li>for Eclipse 2019-03 (4.11): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.11">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.11</a></li>
-			<li>for Eclipse 2018-12 (4.10): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.10">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.10</a></li>
-			<li>for Eclipse 2018-09 (4.9): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.9</a></li>
+			<li>for Eclipse 2019-03 (4.11): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.11">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.11</a></li>
+			<li>for Eclipse 2018-12 (4.10): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.10">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.10</a></li>
+			<li>for Eclipse 2018-09 (4.9): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.9">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.9</a></li>
 		</ul>
 	</p>
 		
@@ -33,15 +33,15 @@
 
 	<p>
 		<ul>
-			<li>for Eclipse Photon (4.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
-			<li>for Eclipse Oxygen (4.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
-			<li>for Eclipse Neon (4.6): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
-			<li>for Eclipse Mars (4.5): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
-			<li>for Eclipse Luna (4.4): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
-			<li>for Eclipse Kepler (4.3): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
-			<li>for Eclipse Juno (4.2): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2">http://dist.springsource.com/snapshot/TOOLS/nightly/e4.2</a></li>
-			<li>for Eclipse Juno (3.8): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.8</a></li>
-			<li>for Eclipse Indigo (3.7): <a href="http://dist.springsource.com/snapshot/TOOLS/nightly/e3.7">http://dist.springsource.com/snapshot/TOOLS/nightly/e3.7</a></li>
+			<li>for Eclipse Photon (4.8): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
+			<li>for Eclipse Oxygen (4.7): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
+			<li>for Eclipse Neon (4.6): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
+			<li>for Eclipse Mars (4.5): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
+			<li>for Eclipse Luna (4.4): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
+			<li>for Eclipse Kepler (4.3): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
+			<li>for Eclipse Juno (4.2): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.2">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.2</a></li>
+			<li>for Eclipse Juno (3.8): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e3.8">https://dist.springsource.com/snapshot/TOOLS/nightly/e3.8</a></li>
+			<li>for Eclipse Indigo (3.7): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e3.7">https://dist.springsource.com/snapshot/TOOLS/nightly/e3.7</a></li>
 		</ul>
 	</p>
 
