updated nightly download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -47,7 +47,7 @@
 
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 2019-03 Milestone Builds (4.11.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2019-03 (4.11.0)</h3>
 	<div id="e411"></div>
 	<script type="text/javascript">
 	$('#e411').load('sts-nightly-e4.11.html');
