cleanup nightly CI download page

--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Spring Tool Suite - Nightly builds</title>
+	<title>Spring Tool Suite 3 - Nightly builds</title>
 	<link rel="shortcut icon" type="image/x-icon" href="https://www.springsource.org/sites/all/themes/s2org11/favicon.ico"/>
 	<link rel="stylesheet" href="stylesheet.css" type="text/css">
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
@@ -13,7 +13,7 @@
 
 	<div style="margin:40px;">
 	
-	<h1>Spring Tool Suite - Nightly builds</h1>
+	<h1>Spring Tool Suite 3 - Nightly builds</h1>
 
 	<h2>p2 repositories</h2>
 
@@ -23,53 +23,23 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse 2019-09 (4.13): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.13">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.13</a></li>
 			<li>for Eclipse 2019-06 (4.12): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.12">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.12</a></li>
-			<li>for Eclipse 2019-03 (4.11): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.11">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.11</a></li>
-			<li>for Eclipse 2018-12 (4.10): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.10">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.10</a></li>
-			<li>for Eclipse 2018-09 (4.9): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.9">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.9</a></li>
 		</ul>
 	</p>
 		
-	<p>not updated anymore:</p>
-
-	<p>
-		<ul>
-			<li>for Eclipse Photon (4.8): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.8">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.8</a></li>
-			<li>for Eclipse Oxygen (4.7): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.7">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.7</a></li>
-			<li>for Eclipse Neon (4.6): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.6">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.6</a></li>
-			<li>for Eclipse Mars (4.5): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.5">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.5</a></li>
-			<li>for Eclipse Luna (4.4): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.4">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.4</a></li>
-			<li>for Eclipse Kepler (4.3): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.3">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.3</a></li>
-			<li>for Eclipse Juno (4.2): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.2">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.2</a></li>
-			<li>for Eclipse Juno (3.8): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e3.8">https://dist.springsource.com/snapshot/TOOLS/nightly/e3.8</a></li>
-			<li>for Eclipse Indigo (3.7): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e3.7">https://dist.springsource.com/snapshot/TOOLS/nightly/e3.7</a></li>
-		</ul>
-	</p>
-
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 2019-06 Milestone Builds (4.12.0 Mx)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2019-09 Milestone Builds (4.13.0)</h3>
+	<div id="e413"></div>
+	<script type="text/javascript">
+	$('#e413').load('sts-nightly-e4.13.html');
+	</script>
+	
+	<h3>Spring Tool Suite - based on Eclipse 2019-06 (4.12.0)</h3>
 	<div id="e412"></div>
 	<script type="text/javascript">
 	$('#e412').load('sts-nightly-e4.12.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse 2019-03 (4.11.0)</h3>
-	<div id="e411"></div>
-	<script type="text/javascript">
-	$('#e411').load('sts-nightly-e4.11.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse 2018-12 (4.10.0)</h3>
-	<div id="e410"></div>
-	<script type="text/javascript">
-	$('#e410').load('sts-nightly-e4.10.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse 2018-09 (4.9.0)</h3>
-	<div id="e49"></div>
-	<script type="text/javascript">
-	$('#e49').load('sts-nightly-e4.9.html');
 	</script>
 	
 	<hr/>
