--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -31,7 +31,7 @@
 		
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 2020-03 Milestone Builds (4.15.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2020-03 Release (4.15.0)</h3>
 	<div id="e415"></div>
 	<script type="text/javascript">
 	$('#e415').load('sts-nightly-e4.15.html');
