--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -43,7 +43,7 @@
 	$('#e414').load('sts-nightly-e4.14.html');
 	</script>
 	
-	<h3>Spring Tool Suite - based on Eclipse 2019-09 (4.13.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2019-09 Release (4.13.0)</h3>
 	<div id="e413"></div>
 	<script type="text/javascript">
 	$('#e413').load('sts-nightly-e4.13.html');
