--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,14 +23,20 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse 2020-06 (4.16): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.16">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.16</a></li>
 			<li>for Eclipse 2020-03 (4.15): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.15">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.15</a></li>
 			<li>for Eclipse 2019-12 (4.14): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.14">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.14</a></li>
-			<li>for Eclipse 2019-09 (4.13): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.13">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.13</a></li>
 		</ul>
 	</p>
 		
 	<h2>distribution builds</h2>
 
+	<h3>Spring Tool Suite - based on Eclipse 2020-06 - Milestone Builds (4.16.0)</h3>
+	<div id="e416"></div>
+	<script type="text/javascript">
+	$('#e416').load('sts-nightly-e4.16.html');
+	</script>
+	
 	<h3>Spring Tool Suite - based on Eclipse 2020-03 Release (4.15.0)</h3>
 	<div id="e415"></div>
 	<script type="text/javascript">
@@ -41,12 +47,6 @@
 	<div id="e414"></div>
 	<script type="text/javascript">
 	$('#e414').load('sts-nightly-e4.14.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse 2019-09 Release (4.13.0)</h3>
-	<div id="e413"></div>
-	<script type="text/javascript">
-	$('#e413').load('sts-nightly-e4.13.html');
 	</script>
 	
 	<hr/>
