--- a/common/html/nightly-distributions.html
+++ b/common/html/nightly-distributions.html
@@ -23,15 +23,21 @@
 
 	<p>
 		<ul>
+			<li>for Eclipse 2020-09 (4.14): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.17">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.17</a></li>
 			<li>for Eclipse 2020-06 (4.16): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.16">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.16</a></li>
 			<li>for Eclipse 2020-03 (4.15): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.15">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.15</a></li>
-			<li>for Eclipse 2019-12 (4.14): <a href="https://dist.springsource.com/snapshot/TOOLS/nightly/e4.14">https://dist.springsource.com/snapshot/TOOLS/nightly/e4.14</a></li>
 		</ul>
 	</p>
 		
 	<h2>distribution builds</h2>
 
-	<h3>Spring Tool Suite - based on Eclipse 2020-06 - Milestone Builds (4.16.0)</h3>
+	<h3>Spring Tool Suite - based on Eclipse 2020-09 - Milestone Builds (4.17.0)</h3>
+	<div id="e417"></div>
+	<script type="text/javascript">
+	$('#e417').load('sts-nightly-e4.17.html');
+	</script>
+	
+	<h3>Spring Tool Suite - based on Eclipse 2020-06 - Release (4.16.0)</h3>
 	<div id="e416"></div>
 	<script type="text/javascript">
 	$('#e416').load('sts-nightly-e4.16.html');
@@ -41,12 +47,6 @@
 	<div id="e415"></div>
 	<script type="text/javascript">
 	$('#e415').load('sts-nightly-e4.15.html');
-	</script>
-	
-	<h3>Spring Tool Suite - based on Eclipse 2019-12 Release (4.14.0)</h3>
-	<div id="e414"></div>
-	<script type="text/javascript">
-	$('#e414').load('sts-nightly-e4.14.html');
 	</script>
 	
 	<hr/>
